force-app/main/default/objects/Known_Pattern__c/Known_Pattern__c.object-meta.xml
<CustomObject>
    <description>Catalog of known anomaly fingerprints with recommended actions. Substitute for Knowledge in demo orgs without KB licensing.</description>
    <label>Known Pattern</label>
    <nameField>
        <label>Pattern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Known Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>