force-app/main/default/objects/Known_Pattern__c/fields/Anomaly_Category__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Category__c</fullName>
    <label>Anomaly Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>