force-app/main/default/objects/Known_Pattern__c/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <description>Confidence threshold the agent uses when this pattern matches. 0.85+ = Tier 1 candidate, 0.60-0.849 = Tier 2.</description>
    <label>Match Confidence</label>
    <precision>5</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>