force-app/main/default/objects/Known_Pattern__c/fields/Pattern_Hash__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Pattern Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>